2013-11-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	src/pandroid_event_viewer/pandorafms/Main.java,
	src/pandroid_event_viewer/pandorafms/Options.java,
	src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java,
	res/drawable-ldpi/save.png, res/drawable-ldpi/icon_filter.png,
	res/drawable-ldpi/icon_refresh.png, res/layout/main.xml,
	res/layout/options.xml, res/drawable/btn_dropdown_pressed.9.png,
	res/drawable/btn_dropdown.xml,
	res/drawable/btn_dropdown_normal.9.png, res/values-ja/arrays.xml,
	res/values/styles.xml, res/values/arrays.xml,
	res/menu/options_menu_list_events.xml, res/values-es/arrays.xml:
	changes in the themes.

2013-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	res/layout/list_view_layout.xml: changes in the theme of the app.

2013-11-04  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	src/pandroid_event_viewer/pandorafms/Main.java,
	src/pandroid_event_viewer/pandorafms/PandroidEventviewerActivity.java,
	res/layout/list_view_layout.xml, res/layout/main.xml: changes in the
	theme of app.

2013-10-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/Main.java,
	res/drawable-ldpi/filter_icon.png,
	res/drawable-ldpi/refrest_icon.png, res/layout/main.xml: changed the
	style app.

2013-10-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/main.xml: changed the style app.

2013-10-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/main.xml, res/layout/options.xml,
	res/values-ja/strings.xml, res/values/strings.xml,
	res/values/styles.xml, res/menu/options_menu_list_events.xml,
	res/menu/options_menu.xml, res/values-es/strings.xml: changed the
	style app.

2013-10-31  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/options.xml,
	res/drawable/edittext_pandora_default_shape.xml,