@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_window_focused="false" android:state_enabled="true" android:drawable="@drawable/btn_dropdown_normal" />
+    <item android:state_window_focused="false" android:state_enabled="true"
+        android:drawable="@drawable/combobox_normal" />
     <item android:state_pressed="true" android:drawable="@drawable/btn_dropdown_pressed" />
-    <item android:state_focused="true" android:state_enabled="true" android:drawable="@drawable/btn_dropdown_pressed" />
-    <item android:state_enabled="true" android:drawable="@drawable/btn_dropdown_normal" />
-    <item android:drawable="@drawable/btn_dropdown_normal" />
+    <item android:state_focused="true" android:state_enabled="true"
+        android:drawable="@drawable/btn_dropdown_pressed" />
+    <item android:state_enabled="true" android:drawable="@drawable/combobox_normal" />
+    <item android:drawable="@drawable/combobox_normal" />
 </selector>
