@@ -14,55 +14,80 @@
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 // GNU General Public License for more details. 
 -->
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="10dip"
->
-	<ImageView
-		android:layout_weight="0"
-		android:contentDescription="@string/pandorafms_logo_description"
-		android:id="@+id/img_logo_about"
-		android:layout_width="wrap_content"
-   		android:layout_height="wrap_content"
-   		android:layout_gravity="center"
-   		android:padding="5dp"
-   		android:src="@drawable/pandorafms_logo"
-	/>
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="@string/pandroid_info_txt"
-	/>
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="@string/pandroid_info_long_txt"
-		android:gravity="center_horizontal"
-	/>
-	<TextView
-		android:id="@+id/url_pandora"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:gravity="center_horizontal"
-	/>
-	<LinearLayout
-	    android:orientation="horizontal"
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
-	>
-		<TextView
-		    android:layout_width="0dp"
-		    android:layout_height="wrap_content"
-		    android:text="@string/dont_show_again"
-		    android:layout_weight="2"
-		/>
-		<CheckBox
-		    android:id="@+id/dont_show_again_extended"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-		/>
-	</LinearLayout>
-</LinearLayout>
+    android:layout_height="wrap_content"
+    android:layout_margin="15dp" >
+
+   <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:padding="10dip" >
+        
+        <TextView
+                    style="@style/label_pandora"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Pandroid Event Viewer"
+                    android:layout_marginBottom="30dp" />
+
+        <ImageView
+            android:id="@+id/img_logo_about"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0"
+            android:contentDescription="@string/pandorafms_logo_description"
+            android:padding="5dp"
+            android:src="@drawable/pandorafms_logo"
+            android:layout_marginBottom="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pandroid_info_txt"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="10dp" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="@string/pandroid_info_long_txt"
+            android:layout_marginBottom="10dp" />
+
+        <TextView
+            android:id="@+id/url_pandora"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal">
+
+            
+            <CheckBox
+                android:id="@+id/dont_show_again_extended"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            
+            <TextView
+                android:layout_marginLeft="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dont_show_again" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+</ScrollView>
