@@ -1,3 +1,12 @@
+2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* src/pandroid_event_viewer/pandorafms/About.java,
+	res/values/styles.xml, res/layout/info.xml,
+	res/drawable/btn_dropdown.xml,
+	res/drawable/btn_dropdown_normal.9.png,
+	res/drawable/round_dialog.xml, res/drawable/combobox_normal.9.png,
+	AndroidManifest.xml: changes in th themes.
+
 2013-11-05  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* src/pandroid_event_viewer/pandorafms/EventList.java,
